code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Jan-2011 Jean-Marie Simonet
 # [#24523] Improve the cpanel of admin templates + correcting some errors. Thanks Christophe.
 $ Adding bn-BD, ckb-IQ, eo-XX, ta-IN installation langs + updating 35 installation langs for 1.6.1 
 $ Updating vi_VN
 
22-Jan-2011 Jean-Marie Simonet
 # Updating some TT credits
 # [#24525] In Bluestork, longer labels are being cut off especially radio button labels. Thanks Andrea

21-Jan-2011 Christophe Demko
 # [#24523] Improve the cpanel of admin templates + correting some errors
 # Revert [#24523]

21-Jan-2011 Jean-Marie Simonet
 $ [#24520] Incorrect tooltips in Articles Categories module. Thanks Jozsef and Bill.
 $ [#24518] Incorrect tooltip in Module Manager. Thanks Jozsef and Bill. 
 
20-Jan-2011 Jean-Marie Simonet
 # [#24491] com_contact, wrong string is used in config.xml (COM_CONTACT_FIELD_PROFILE_SHOW_LABEL used twice). Thanks Edgars.
 # Changing version number in en-GB.xml and en-US.xml installation
 # Adding missing new tag in localise.xml [#23083]
 # [#24318] Administration templates renders JForm "checkboxes" incorrectly in config. Thanks Andrea.

19-Jan-2011 Jean-Marie Simonet
 #$ [#24464] Incorrect language definition in 'List Contacts in a Category' menu item type. Thanks Jozsef and Bill.
 # [#24397] group perms list should be expand/collapsible at will. Thanks Jeremy and Andrea.
 #$ [#24475] Multiple groups are a problem in the user manager. Thanks Andrea.
 $ [#24097] Adding new strings from that non-committed yet patch in installation ini files to freeze them for 1.6.1. 
  
18-Jan-2011 Jean-Marie Simonet
 # Correcting code typo
 # [#24327] Bluestork administrator template template.css typo. Thanks Bill.
 # [#24428] breadcrumbs doesn't look good on rtl templates
 # [#24461] Langswitcher module needed display improvement parameters