@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#24523] Improve the cpanel of admin templates + correcting some errors. Thanks Christophe.
  $ Adding bn-BD, ckb-IQ, eo-XX, ta-IN installation langs + updating 35 installation langs for 1.6.1 
  $ Updating vi_VN
+ # [#24570] Correcting icon message display in installation with rtl lang
  
 22-Jan-2011 Jean-Marie Simonet
  # Updating some TT credits
